# Social-Media-App

./: pnpm-workspace.yaml
.github/workflows/: backend-tests.yml  frontend-tests.yml
.render/: render.yaml
backend/: .env.example  .gitignore  ExamplePostsList.txt  ShadCNCompList.txt  factories.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_22_0557-84fb1e03bda0_initial_schema.py  2026_05_10_0506-076fe872bf25_add_image_url_column_to_posts_table.py  2026_05_11_0930-21adc1bce9ee_add_image_fileid_column_to_posts_table.py
backend/app/: app.py  database.py  dependencies.py  models.py  oauth2.py  schemas.py  utils.py
backend/app/core/: logging.py
backend/app/middleware/: logging_middleware.py
backend/app/routers/: auth.py  posts.py  users.py  vote.py
backend/scripts/: setup_db.py
backend/tests/: conftest.py  test_auth.py  test_posts.py  test_users.py  test_votes.py
frontend/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/new-post/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/nav/: sidebar.tsx
frontend/src/components/posts/: edit-post-dialog.tsx  post-card.tsx
frontend/src/lib/: api.ts  auth-context.tsx
frontend/src/tests/: edit-post-dialog.test.tsx  login.test.tsx  post-card.test.tsx  signup.test.tsx
frontend/src/tests/msw/: server.ts  (+1 more)
