[project]
name = "social-media-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.135.2",
    "imagekitio>=5.4.0",
    "psycopg[binary,pool]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "rich>=14.3.3",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.18.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
